react-app/src/components/NewMessage/NewMessage.css
.new_message_div {
  width: 100%;
}

.new_message_div form {
  display: flex;
  flex-direction: row;
  align-items: center;
  background-color: #dea406;
  padding: 20px;
  border-radius: 10px;
  margin: 15px 5px 2px 5px;
}

.new_message_div form textarea {
  width: 90%;
  height: 45px;
  margin-right: 10px;
  border: 2px solid white;
}

.input-err {
  background: #fff0f4;
  border: red 2px solid !important;
  outline: none;
}

.input-err::placeholder {
  color: red !important;
}

